--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -113,3 +113,4 @@ button:
   new: "Ajouter un produit"
   line.update: "Mettre à jour"
   line.add: "Ajouter à la liste"
+  line.cancel: "Retourner à la liste"
